# plana-core

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: publish.yml
plana/: constant.py
plana/cogs/: achievements.py  ai.py  gateway.py  info.py  levels.py  message.py  mod.py  music.py  plana.py  role.py  rss.py
plana/locales/: en-US.yml  es.yml  ja.yml  zh-CN.yml
plana/models/: achievements.py  ai.py  base.py  discord.py  guild.py  levels.py  message.py  react_role.py  rss.py  user.py  welcome.py
plana/services/: agent.py  manager.py  openai.py  sub.py  tools.py
plana/types/: exceptions.py
plana/ui/: embeds.py
plana/utils/: context.py  core.py  helper.py  translate.py
tests/: test_message_ops.py  test_s3.py  test_sub.py
